Fixed gulpfile so that CSS actually compiles now, and scripts are placed in the correct directory.
Modified default welcome.blade.php to test new layouts. Added master layout file.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,3 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
+// These imports are specified in the gulpfile.js in the project root
+// If you want to import something else, specify it there, too!
+@import "bootstrap";
