Added public/assets to .gitignore, as these are now generated by gulp (yay!)
Laravel Elixir now installs FontAwesome, too.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,2 @@
-// These imports are specified in the gulpfile.js in the project root
-// If you want to import something else, specify it there, too!
 @import "bootstrap";
+@import "font-awesome";
