List of people currently stored in the system.
Added CSS file for people views.

--- a/resources/assets/css/theme.css
+++ b/resources/assets/css/theme.css
@@ -107,3 +107,9 @@ body {
 a#progress-brand {
     color: #FFF;
 }
+
+/* Vertical align center table content */
+
+table > tbody > tr > td {
+    vertical-align: middle !important;
+}
