--- a/resources/assets/css/people.css
+++ b/resources/assets/css/people.css
@@ -1,3 +1,9 @@
 table#personListTable h5 {
     font-weight: bold !important;
 }
+
+h2.job-position-heading {
+    font-style:italic;
+    color: #666666;
+    font-size: 20px;
+}
